<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/rl_tittle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#09bef0"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/iv_leftarrow"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="3dp"
            android:src="@drawable/leftarrow"/>

        <ImageView
            android:id="@+id/iv_qqicon"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_toRightOf="@id/iv_leftarrow"
            android:src="@drawable/qq"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="4dp"
            android:gravity="center_vertical"
            android:text="@string/phonenumbertitle"
            android:textColor="#ffffff"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="13dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:gravity="center">
        <LinearLayout
            android:id="@+id/ll_countryandcode"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.3"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_country"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:text="中国"
                android:maxLines="1"
                android:maxEms="9"
                android:ellipsize="end"
                android:textSize="16sp"
                android:textColor="@color/bluefont"
                android:layout_weight="0.4"
                android:gravity="center"/>

            <TextView
                android:id="@+id/tv_countrycode"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:text="+86"
                android:textSize="16sp"
                android:maxLength="5"
                android:lines="1"
                android:textColor="@color/bluefont"
                android:layout_weight="0.6"
                android:gravity="center_vertical"/>
        </LinearLayout>

        <EditText
            android:id="@+id/et_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:hint="@string/inputphonenumber"
            android:textColor="@color/blackfont"
            android:textColorHint="@color/textHintGray"
            android:inputType="phone"
            android:focusable="true"
            android:textSize="18sp"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_regnext"
        android:layout_width="match_parent"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_height="45dp"
        android:enabled="false"
        android:background="@drawable/btn_grayshape"
        android:text="@string/btnnext"
        android:textColor="@color/textHintGray"/>
    <LinearLayout
        android:layout_marginTop="13dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/cb_term"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:checked="true"
            android:background="@drawable/termradiobtn_reg"></CheckBox>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/readandagree"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/termandprivacypolitics"
            android:textColor="@color/bluefont"/>
    </LinearLayout>

</LinearLayout>
