<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/rl_tittle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#09bef0"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_leftarrow"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="3dp"
            android:src="@drawable/leftarrow"/>

        <ImageView
            android:id="@+id/iv_qqicon"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_toRightOf="@id/iv_leftarrow"
            android:src="@drawable/qq"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="4dp"
            android:gravity="center_vertical"
            android:text="@string/add"
            android:textColor="#ffffff"
            android:textSize="20sp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="25dp"
        android:text="@string/add"
        android:textSize="16sp"/>

    <LinearLayout
        android:id="@+id/ll_addFofG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/addhint_search"
            android:gravity="center_vertical"
            android:text="@string/add_hint"
            android:textColor="@color/deepgray"
            android:textSize="16sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginTop="7dp"
            android:background="@color/deepgray"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.75dp"
            android:layout_marginTop="45dp"
            android:background="@color/textHintGray"/>

        <RelativeLayout
            android:id="@+id/rl_findby"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp">

            <ImageView
                android:id="@+id/iv_bluesearch"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:padding="5dp"
                android:src="@drawable/bluesearch"/>

            <TextView
                android:layout_marginTop="7dp"
                android:id="@+id/tv_findby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/iv_bluesearch"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"
                android:textColor="@color/blackfont"
                android:layout_toRightOf="@id/iv_bluesearch"
                android:text="@string/findby"/>

            <TextView
                android:id="@+id/tv_findbyhint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/deepgray"
                android:layout_alignLeft="@+id/tv_findby"
                android:layout_marginTop="3dp"
                android:layout_alignBottom="@id/iv_bluesearch"
                android:layout_below="@+id/tv_findby"
                android:text="@string/findby_hint"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.75dp"
            android:layout_marginTop="14dp"
            android:background="@color/textHintGray"/>

        <LinearLayout
            android:id="@+id/ll_addphonecontact"
            android:layout_marginTop="22dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:padding="5dp"
                android:src="@drawable/phonebook"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:textColor="@color/blackfont"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:text="@string/addcontactbyphone"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.75dp"
            android:background="@color/textHintGray"/>
        <LinearLayout
            android:id="@+id/ll_scan"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:padding="5dp"
                android:src="@drawable/justscanit"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:textColor="@color/blackfont"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:text="@string/scan"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.75dp"
            android:background="@color/textHintGray"/>
        <LinearLayout
            android:clickable="true"
            android:background="@drawable/nomalitem"
            android:id="@+id/ll_facetofacediscuss"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:padding="5dp"
                android:src="@drawable/discuss"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:textColor="@color/blackfont"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"
                android:text="@string/facetoface_chargroup"/>
    </LinearLayout>
    </LinearLayout>




</LinearLayout>