<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_tittle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#09bef0"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_qqicon"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:src="@drawable/qq"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_marginLeft="4dp"
            android:layout_toRightOf="@id/iv_qqicon"
            android:gravity="center_vertical"
            android:text="@string/qqlight"
            android:textColor="#ffffff"
            android:textSize="20sp"/>

        <SearchView
            android:id="@+id/sv_main"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="70dp"
            android:layout_toLeftOf="@+id/iv_add"
            android:gravity="center_vertical"
            android:queryHint="@string/search_hint"></SearchView>

        <ImageView
            android:id="@+id/iv_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:background="@drawable/maintitleitem"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_message"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="消息"
                android:textColor="#09bef0"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/messagebubble"
                android:text="66"
                android:textSize="14sp"
                android:textColor="#ffffff"
                android:gravity="center"
                android:layout_gravity="right|center_vertical"/>

        </FrameLayout>

        <TextView
            android:id="@+id/tv_contact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/contact"
            android:textColor="@color/blackfont"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_me"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/me"
            android:textColor="@color/blackfont"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/messageline"
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:layout_weight="1"
            android:background="@color/btn_press"/>

        <View
            android:id="@+id/contactline"
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:layout_weight="1"
            android:background="#ffffff"/>

        <View
            android:id="@+id/meline"
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:layout_weight="1"
            android:background="#ffffff"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/deepgray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="true"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <fragment
            android:id="@+id/frag_message"
            android:name="xion.lightqq.fragment.MessageFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <fragment
            android:id="@+id/frag_contact"
            android:name="xion.lightqq.fragment.ContactFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <fragment
            android:id="@+id/frag_me"
            android:name="xion.lightqq.fragment.MeFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
