<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginLeft="13dp"
              android:layout_marginRight="13dp"
              android:orientation="vertical">
    <RelativeLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:id="@+id/piv_mpic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <xion.lightqq.widget.CirclePortraitView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/sherlock"></xion.lightqq.widget.CirclePortraitView>
            <ImageView
                android:layout_gravity="bottom|right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/online"/>
        </FrameLayout>


        <TextView
            android:id="@+id/tv_sendername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/piv_mpic"
            android:layout_toRightOf="@+id/piv_mpic"
            android:textColor="@color/blackfont"
            android:text="时过境迁，烂事依然"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"/>
    </RelativeLayout>
    <View
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:background="@color/textHintGray"/>
    <TextView
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:id="@+id/tv_messagerecent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="他们没有见过高处的风景，我怎么忍心怪他们？"/>
    <View
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:background="@color/textHintGray"/>
        android:textSize="15sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:src="@drawable/circle"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:padding="7dp"
                android:src="@drawable/profile"
                android:layout_gravity="center"/>
        </FrameLayout>


        <TextView
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.85"
            android:gravity="center_vertical"
            android:text="@string/myprofile"
            android:textColor="@color/blackfont"
            android:textSize="16sp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:background="@color/textHintGray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:src="@drawable/circle"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:padding="7dp"
                android:src="@drawable/favorite"
                android:layout_gravity="center"/>
        </FrameLayout>


        <TextView
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.85"
            android:gravity="center_vertical"
            android:text="@string/myfavoriter"
            android:textColor="@color/blackfont"
            android:textSize="16sp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:background="@color/textHintGray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:src="@drawable/circle"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:padding="7dp"
                android:src="@drawable/album"
                android:layout_gravity="center"/>
        </FrameLayout>


        <TextView
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.85"
            android:gravity="center_vertical"
            android:text="@string/myalbum"
            android:textColor="@color/blackfont"
            android:textSize="16sp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:background="@color/textHintGray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:src="@drawable/circle"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:padding="7dp"
                android:src="@drawable/individuation"
                android:layout_gravity="center"/>
        </FrameLayout>


        <TextView
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.85"
            android:gravity="center_vertical"
            android:text="@string/individuation"
            android:textColor="@color/blackfont"
            android:textSize="16sp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:background="@color/textHintGray"/>


    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:src="@drawable/circle"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:padding="7dp"
                android:src="@drawable/peoplenearby"
                android:layout_gravity="center"/>
        </FrameLayout>


        <TextView
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.85"
            android:gravity="center_vertical"
            android:text="@string/peoplenearby"
            android:textColor="@color/blackfont"
            android:textSize="16sp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:background="@color/textHintGray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:src="@drawable/circle"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:padding="7dp"
                android:src="@drawable/groupsnearby"
                android:layout_gravity="center"/>
        </FrameLayout>


        <TextView
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.85"
            android:gravity="center_vertical"
            android:text="@string/groupsnearby"
            android:textColor="@color/blackfont"
            android:textSize="16sp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:background="@color/textHintGray"/>

</LinearLayout>
